--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.9.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
